# edelya

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
src/: requirements-dev.txt  requirements.txt
src/_tests/: __init__.py  conftest.py
src/_tests/fixtures/: dishes.py  factory.py  ingredients.py  mocks.py  planning.py  shopping.py  subscriptions.py  users.py
src/_tests/tests/a12n/: test_jwt_auth.py
src/_tests/tests/dishes/: test_dishes.py  test_ingredients.py
src/_tests/tests/planning/: test_cooking_events.py  test_meal_plan_items.py  test_week_dishes.py
src/_tests/tests/shopping/: test_shopping_list_item_viewset.py  test_shopping_list_recalculater.py  test_shopping_list_viewset.py
src/_tests/tests/subscriptions/: test_can_use_base_features.py  test_has_active_trial.py  test_payment_method_viewset.py  test_select_tariff.py  test_subscription_viewset.py  test_tariff_viewset.py  test_yookassa_payments.py
src/_tests/tests/users/: test_onboarding_data.py
src/a12n/: schemas.py  urls.py  views.py
src/a12n/services/: telegram_a12n_jwt.py
src/app/: admin.py  logging_handlers.py  schemas.py  settings.py  urls.py
src/app/base/: abstract_models.py  decorators.py
src/apps/a12n/: apps.py  authentications.py  schemas.py  urls.py  validators.py  views.py
src/apps/a12n/services/: telegram_a12n_jwt.py
src/apps/dishes/: apps.py  contstants.py
src/apps/dishes/admin/: __init__.py  dishes.py  ingredients.py
src/apps/dishes/api/: schemas.py  urls.py
src/apps/dishes/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
src/apps/planning/: apps.py  contstants.py  utils.py
src/apps/shopping/: apps.py  constants.py  data_types.py
src/apps/subscriptions/: constants.py
src/apps/users/: admin.py  managers.py  models.py
src/core/: asgi.py  constants.py  logging_handlers.py  settings.py  urls.py  utils.py  wsgi.py
src/core/base/: abstract_models.py  exceptions.py  managers.py  permissions.py  serialisers.py  services.py  validators.py
src/data/: start_data.yaml
src/dishes/api/: schemas.py  urls.py
src/dishes/migrations/: 0001_initial.py
src/dishes/models/: __init__.py  dishes.py  ingredients.py  model_enums.py
src/users/: admin.py  managers.py  models.py
src/users/migrations/: 0001_initial.py
(+101 files in other folders)
